--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ Version: 1.0.0
 - Clients can now bind multiple times to the wl_seat global. This fixes the Firefox problem where it could only receive pointer events.
 - Clients can now create a wl_data_device for each wl_seat.
 - Clients can now bind multiple times to the wl_subcompositor global.
-
+- Moved ping() and pong() functions to LClient class.
 
 
 
