--- a/CHANGES
+++ b/CHANGES
@@ -18,12 +18,12 @@ Additions:
 
 Changes:
 
-- The LCompositor::start() function is now non-blocking. Developers can control the rate of the compositor events processing using the pollable LCompositor::fd() and LCompositor::processLoop() fuction.
+- The LCompositor::start() method is now non-blocking. Developers can control the rate of the compositor events processing using the pollable LCompositor::fd() and LCompositor::processLoop() fuction.
 - New directory structure for protocol interfaces located in src/lib/protocols.
 - Clients can now bind multiple times to the wl_seat global. This fixes the Firefox problem where it could only receive pointer events.
 - Clients can now create a wl_data_device for each wl_seat.
 - Clients can now bind multiple times to the wl_subcompositor global.
-- Moved ping() and pong() functions from XDG Shell to LClient class.
+- Moved ping() and pong() method from XDG Shell to LClient class.
 - The DRM graphic backend now uses the SRM library.
 
 Removed:
