--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Louvre (1.1.0-1)
 
   * Error and fatal messages from LLog are now directed to stderr, thanks to @brianhsu.
   * LToplevelRole configure events are now stored and dispatched at the conclusion of a main loop iteration.
+  * Toplevels are now automatically configured with the pending states and size if the developer does not explicitly configure them during set or unset fullscreen or maximize requests.
 
  -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 16 Dec 2023 15:51:55 -0300
 
