Resolved a bug where LSolidColorViews were not marked as damaged when their color was changed

--- a/CHANGES
+++ b/CHANGES
@@ -38,6 +38,7 @@ Louvre (1.1.0-1)
 
   * Addressed a bug in LPainter::clearScreen() where it failed to clear the entire screen when the current framebuffer transform differed from LFramebuffer::Transform::Normal.
   * Addressed a bug where the data source cancelled event wasn't sent to the client when start drag & drop sessions were denied.
+  * Resolved a bug where LSolidColorViews were not marked as damaged when their color was changed.
 
  -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 16 Dec 2023 15:51:55 -0300
 
