--- a/CHANGES
+++ b/CHANGES
@@ -9,16 +9,16 @@ Louvre (1.2.0-1)
 
   # New Features
 
-  * LOutput now provides support for fractional scales and the ability to seamlessly toggle oversampling on and off to reduce aliasing artifacts.
+  * LOutput now supports fractional scales and the ability to seamlessly toggle oversampling on and off to reduce aliasing artifacts when required.
   * Added VSync disabling capability in LOutput with optional refresh rate limits.
-  * LOutput now allows specifying custom gamma correction curves through the new LGammaTable class.
-  * Enhanced drawing capabilities in LPainter with new methods for rendering texture regions with higher precision and applied transforms.
+  * LOutput now supports custom gamma correction curves through LOutput::setGamma() and the new LGammaTable class.
+  * LPainter has new methods for rendering texture regions with higher precision and applied transforms.
   * LTextureView now supports custom source rects and transforms.
   * Introduced LBitset class to reduce memory usage for storing binary conditions.
 
   # Minor API Changes
 
-  * Replaced non-order-dependent lists with vectors to minimize cache misses.
+  * Replaced most of the non-order-dependent lists with vectors to minimize cache misses.
   * LOutput setBufferDamage() now takes LRegion * as an argument instead of LRegion &.
   * Updated all virtual constructor parameters in LCompositor to const void *.
   * Removed the create() method in LAnimation and LTimer, replaced with class constructors for stack allocation.
