--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Louvre (2.0.0-0)
+
+  # Security
+
+  * Replaced LClient::destroy() with destroyLater() to prevent potential access to freed client resources.
+
 Louvre (1.2.1-1)
 
   # Internal Changes
